# fprime-xtce

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/fprime_xtce/: __init__.py  __main__.py  container_generation.py  convert.py  packet_convert.py  primitive_containers.py  primitive_types.py  type_converter.py  utilities.py  xtce.py
test/: conftest.py
test/fprime_xtce/: test_edge_cases.py  test_telemetry_channels.py
tests/: __init__.py  test.py
tests/data/: ReferenceDeploymentTopologyDictionary.json  ReferenceDeploymentTopologyDictionary.ref.xml  SimpleTestDictionary.json  SimpleTestDictionary.ref.xml
