[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/fprime_xtce/_version.py"

[project]
name = "fprime-xtce"
dynamic = ["version"]
description = "Convert F' (F-Prime) telemetry and command definitions to XTCE format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Michael Starch", email = "lestarch@googlemail.com"}
]
dependencies = [
    "xmlschema",
]
# Copyright 2026. Licensed under Apache License 2.0.
# See LICENSE file for details.
keywords = ["fprime", "xtce", "telemetry", "command"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
fprime-to-xtce = "fprime_xtce.__main__:main"

[project.urls]
Homepage = "https://github.com/open-source-space-foundation/fprime-to-xtce"
Repository = "https://github.com/open-source-space-foundation/fprime-to-xtce.git"
Issues = "https://github.com/open-source-space-foundation/fprime-to-xtce/issues"
